Added Netlify URL to SecurityConfig CORS